# oop_pract_5

./: README.md  main.py  oop_pract_5.code-workspace  pyproject.toml
examples/: add_method_in_dataclass.py  example_inheritance.py  make_dataclass.py  make_franch_deck.py  playing_card_use_order.py  positon_example.py  simple_example_dataclass.py  use_field_metadata.py  use_frozen.py
tasks/: product.py  task_product.py  task_storage.py
tasks/storage_package/: limited_storage.py
tests/: test_product.py  test_storage.py
